--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-<<<<<<< HEAD
-# Ignore binary class files
-*.class
-
 # Ignore Eclipse configuration files
 .project
 .classpath
 
 # Ignore Eclipse project settings
 .settings/
-=======
->>>>>>> 6aff811968242e8da429b2c9a4cadb3c7ff956b8
-/bin/
+bin/
